--- a/style.css
+++ b/style.css
@@ -1,28 +1,69 @@
-img {
-    width: 228.64px;
-    height: 338.38px;
-    border:5px solid rgb(255, 255, 255);
-    background: 10px 10px 5px rgb(56, 55, 55);
-    box-shadow: 10px 10px 5px rgb(56, 55, 55);
-    -moz-box-shadow: 10px 10px 5px rgb(56, 55, 55);
-    -webkit-box-shadow: 10px 10px 5px rgb(56, 55, 55);
-    -khtml-box-shadow: 10px 10px 5px rgb(56, 55, 55);
-    -o-box-shadow: 10px 10px 5px rgb(56, 55, 55);
-}
+.site {
+    display: grid;
+    grid-template-columns:1fr 3fr;
+    grid-template-areas:"header header"
+                        "navbar  main"
+                        "footer   footer";
+    grid-gap:10px; margin:20px; padding:10px; border:solid 2px #000;
+  }
 
-body {
-    background-color: rgb(238, 210, 185);
+  .mastheader{background:rgba(150, 212, 178, 0.4); grid-area:header;}
+  .main-content{background:white; grid-area:main; min-height:500px;}
+  .navbar{
+    background:aquamarine; 
+    grid-area:navbar;
+  }
+  .footer{
+    background:rgba(150, 212, 212, 0.4); 
+    grid-area:footer;
     
-}
+  }
 
-h1 {
-    font-family: Georgia, serif;
-}
+  #hlink:link {
+    color: black;
+    text-decoration: none;
+  }
 
-h2 {
-    font-family:'Courier New';
-}
+  #hlink:visited {
+    color: black;
+    text-decoration: none;
+  }
 
-#africa {
-    width: 500px;
-}
+  a:hover h1{
+    font-weight: bold;
+    color: black;
+    text-shadow: #000;
+    text-decoration: none;
+  }
+
+  h1{
+    margin-left: 10px;
+    font-size: 2em;
+    font-weight: 400;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+  }
+
+  h3 {
+    font-size: 1.3em;
+    font-weight: 400;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+  }
+
+  table, th, td {
+    width: 100%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    text-align: center;
+    font-family: 'Courier New';
+    font-size: 15px;
+    }
+
+    tr:nth-child(even) {
+      background-color: #D6EEEE;
+    }
+
+
+  
