final touches before deadline

--- a/style.css
+++ b/style.css
@@ -4,14 +4,140 @@
     grid-template-areas:"header header"
                         "navbar  main"
                         "footer   footer";
-    grid-gap:10px; margin:20px; padding:10px; border:solid 2px #000;
+    margin:0; padding:0; grid-gap: 0;
+    width: 100vw; height:100vh;
   }
 
-  .mastheader{background:rgba(150, 212, 178, 0.4); grid-area:header;}
-  .main-content{background:white; grid-area:main; min-height:500px;}
+  .mastheader{
+    background:rgba(150, 212, 178, 0.4); 
+    grid-area:header;
+  }
+
+  
+  @media only screen and (max-width: 600px) {
+    html{
+      height: 100%;
+      
+    }
+    .site {
+      grid-template-columns: 1fr;
+      grid-template-areas: "header"
+                           "navbar"
+                           "main"
+                           "footer";
+    }
+    .site {
+      display: flex;
+      flex-direction: column;      
+    }
+    .mastheader{
+      order: -2;
+    }
+    .navbar{
+      order: -1;
+    }
+
+    
+    .main-content{
+      order: 1;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow-y: visible;
+      overflow-y: scroll;
+
+    }
+
+    /* make section and img align appear one after the other instead of side by side */
+    .main-content section{
+      order: 1;
+      width: fit-content;
+      height: fit-content;
+      align-items: center;
+      text-align: fit-content;
+    }
+    .main-content .img-align{
+      width: fit-content;
+      height: fit-content;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      order: 2;
+      
+    }
+
+     
+    
+    .footer{
+      order: 2;
+    }
+
+    .jumbotron{
+      height: fit-content;
+      width: fit-content;
+      margin: 0 auto;
+    }
+
+    .opener{
+      padding-top: 0;
+    }
+    
+  }
+
+  .dark-mode {
+    background-color: black;
+    color: white;
+  }
+
+  .dark-mode ul {
+    background-color: black;
+    color: white;
+  }
+
+  .dark-mode li:nth-child(even) {
+    background-color: rgb(60, 21, 21);
+    color: white;
+  }
+
+  .dark-mode .default > li:nth-child(even) {
+    background-color: black;
+    color: white;
+  }
+
+  .dark-mode .jumbotron {
+    background-color: black;
+    color: white;
+  }
+
+  .dark-mode .legend, .dark-mode h1 {
+    color: white;
+  }
+
+  .dark-mode a:hover h1{
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    text-shadow: #000;
+    text-decoration: none;
+  }
+
+  .dark-mode .mastheader, .dark-mode .footer {
+    background-color: rgb(30, 0, 0);
+    
+  }
+
+  .dark-mode .but {
+    background-color: rgb(60, 21, 21);
+    border: 1px solid white;
+    border-radius: 50px;
+    color: white;
+  }
+
+  .main-content{grid-area:main; min-height:500px;}
+
   .navbar{
     background:aquamarine; 
-    grid-area:navbar;
+    grid-area:navbar; height: 100%;
   }
   .footer{
     background:rgba(150, 212, 212, 0.4); 
@@ -52,18 +178,118 @@
     text-align: center;
   }
 
-  table, th, td {
-    width: 100%;
-    padding-top: 2.5%;
-    padding-bottom: 2.5%;
-    text-align: center;
-    font-family: 'Courier New';
-    font-size: 15px;
-    }
-
-    tr:nth-child(even) {
+    li:nth-child(even) {
       background-color: #D6EEEE;
     }
 
+    .navbar > ul {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+    }
+    .navbar > ul > li{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .main-container {
+      overflow-y: scroll;
+      height: 100%;
+    }
+
+    h2 {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 2em;
+    }
+
+    .section{
+      height: 100%;
+      width: 100%;
+      justify-content: space-around;
+      margin-top: 10px;
+    }
+
+    .img-align {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+    }
+    .opener{
+      padding-top: 150px;
+      text-align: center;
+    }
+  
+
+    #incept, #flag, #africa, #safari {
+      width: 238.64px;
+      height: 338.38px;
+      border:5px solid rgb(255, 255, 255);
+      background: 10px 10px 5px rgb(56, 55, 55);
+      box-shadow: 10px 10px 5px rgb(56, 55, 55);
+     }
+
+     
+
+     .img_scroll{
+      width: 268.64px;
+      height: 368.38px;
+      display: flex;
+      flex-direction:column;
+      align-items: center;
+      overflow-y: scroll;
+     }
+    
+     .default > li:nth-child(even) {
+      background-color: #ffffff;
+    }
+
+    .default > li {
+      list-style-type: none;
+      text-align: center;
+      padding: 40px;
+    }
 
   
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    .jumbotron {
+      margin-top: 20px;
+      margin-left: 250px;
+      margin-right: 250px;
+      border: 1px solid #990000;
+      border-radius: 0;
+
+      margin-bottom: 10px;
+    }
+
+    input[type="radio"] {
+      margin-right: 0;
+    }
+
+    #form {
+      margin-top: 100px;
+    }
+
+    .mastheader {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+      
+    
