--- a/style.css
+++ b/style.css
@@ -14,76 +14,6 @@
   }
 
   
-  @media only screen and (max-width: 600px) {
-    html{
-      height: 100%;
-      
-    }
-    .site {
-      grid-template-columns: 1fr;
-      grid-template-areas: "header"
-                           "navbar"
-                           "main"
-                           "footer";
-    }
-    .site {
-      display: flex;
-      flex-direction: column;      
-    }
-    .mastheader{
-      order: -2;
-    }
-    .navbar{
-      order: -1;
-    }
-
-    
-    .main-content{
-      order: 1;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      overflow-y: visible;
-      overflow-y: scroll;
-
-    }
-
-    /* make section and img align appear one after the other instead of side by side */
-    .main-content section{
-      order: 1;
-      width: fit-content;
-      height: fit-content;
-      align-items: center;
-      text-align: fit-content;
-    }
-    .main-content .img-align{
-      width: fit-content;
-      height: fit-content;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      order: 2;
-      
-    }
-
-     
-    
-    .footer{
-      order: 2;
-    }
-
-    .jumbotron{
-      height: fit-content;
-      width: fit-content;
-      margin: 0 auto;
-    }
-
-    .opener{
-      padding-top: 0;
-    }
-    
-  }
 
   .dark-mode {
     background-color: black;
@@ -293,3 +223,73 @@
     }
       
     
+  @media only screen and (max-width: 600px) {
+    html{
+      height: 100%;
+      
+    }
+    .site {
+      grid-template-columns: 1fr;
+      grid-template-areas: "header"
+                           "navbar"
+                           "main"
+                           "footer";
+    }
+    body {
+      display: flex;
+      flex-direction: column;      
+    }
+    .mastheader{
+      order: -2;
+    }
+    .navbar{
+      order: -1;
+    }
+
+    
+    .main-content{
+      order: 1;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow: visible;
+      
+
+    }
+
+    /* make section and img align appear one after the other instead of side by side */
+    .main-content section{
+      order: 1;
+      width: fit-content;
+      height: fit-content;
+      align-items: center;
+      text-align: fit-content;
+    }
+    .main-content .img-align{
+      width: fit-content;
+      height: fit-content;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      order: 2;
+      
+    }
+
+     
+    
+    .footer{
+      order: 2;
+    }
+
+    .jumbotron{
+      height: fit-content;
+      width: fit-content;
+      margin: 0 auto;
+    }
+
+    .opener{
+      padding-top: 0;
+    }
+    
+  }
